# AEC-Assignment

./: .gitignore  README.md  dev.ps1  mental_health.db  setup_and_run.bat
backend/: CMakeLists.txt  main.cpp  sha256.hpp
frontend/: dashboard.html  index.html  login.html  mood_analytics.html  mood_history.html  profile.html
